# CompGrafica

./: .gitignore  CMakeLists.txt  README.md  Trab1_README.md
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: cmake_uninstall.cmake
docs/: drawio.txt
grid_scripts/: main.py  model.py  pyproject.toml  sword.py
include/: boids.hpp  camera.hpp  input_system.hpp  mesh.hpp  obj_parser.h  obj_parser.hpp  projection.hpp  scene.hpp  scene_object.hpp  shader.h  shader.hpp
objects/gary/: back.mtl  eyes.mtl  lower.mtl
objects/jellyfish/: jellyfish.mtl
objects/patrick/: patrick.mtl
objects/sky/: sky.mtl
objects/sponge_bob_dirt/: dirt.mtl
objects/sponge_bob_house/: house.mtl
objects/sponge_bob_house_floor/: floor.mtl
objects/spongebob/: spongebobarms.mtl  spongebobcore.mtl  spongebobhips.mtl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: boids.cpp  camera.cpp  input_system.cpp  main.cpp  mesh.cpp  obj_parser.cpp  projection.cpp  scene.cpp  scene_object.cpp  shader.cpp
